including static files in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "handler.go",
-      "use": "@vercel/go"
+      "use": "@vercel/go",
+      "config": {
+        "includeFiles": ["static/css/**/*", "template/**/*", "assets/**/*"]
+      }
     }
   ],
   "routes": [
