--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "handler.go",
       "use": "@vercel/go",
       "config": {
-        "includeFiles": ["static/css/**/*", "template/**/*", "assets/**/*"]
+        "includeFiles": ["static/css/**/*", "templates/**/*", "assets/**/*"]
       }
     }
   ],
