--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,12 @@
       "dest": "handler.go"
     },
     {
-      "src": "/static/(.*)",
-      "dest": "/static/css/$1"
+      "src": "static/(.*)",
+      "dest": "static/css/$1"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
+      "src": "assets/(.*)",
+      "dest": "assets/$1"
     },
     {
       "src": "/templates/(.*)",
